# dockerimage-updater

./: .gitignore  Cargo.toml  LICENSE  README.md  cov.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: codecov.yml  release.yml
src/: cli.rs  container_image.rs  docker_file.rs  main.rs  utils.rs  version.rs
src/registries/: dockerhub.rs  mcr.rs  mod.rs
src/tag/: mod.rs  variant.rs
tests/testfiles/: Dockerfile1  DockerfileExample1  DockerfileExample2
