[package]
    edition = "2024"
    name    = "dockerimage-updater"
    version = "2.0.2"

[dependencies]
    clap               = { version = "4.5", features = ["derive"] }
    rustls             = { version = "0.23", features = ["ring"] }
    serde              = { version = "1.0", features = ["derive"] }
    serde_json         = { version = "1.0" }
    thiserror          = { version = "2.0" }
    tracing            = { version = "0.1" }
    tracing-subscriber = { version = "0.3", features = ["env-filter"] }
    ureq               = { version = "3.1", default-features = false, features = ["json", "rustls"] }
    walkdir            = { version = "2.5" }

[dev-dependencies]
    pretty_assertions = { version = "1.4" }
    rand              = { version = "0.9" }

[lints.clippy]
    complexity  = { level = "deny", priority = -1 }
    correctness = { level = "deny", priority = -1 }
    nursery     = { level = "deny", priority = -1 }
    pedantic    = { level = "deny", priority = -1 }
    perf        = { level = "deny", priority = -1 }
    style       = { level = "deny", priority = -1 }
    suspicious  = { level = "deny", priority = -1 }
    unwrap_used = { level = "deny" }
